add: Compiling C Source Code