@@ -4,9 +4,7 @@
 package jthrice.launcher;
 
 import java.io.IOException;
-import java.io.PrintStream;
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 import jthrice.generator.Generator;
 
@@ -25,43 +23,22 @@ public class Launcher {
         if (arguments.length < 1) {
             System.out.println("Provide a Thrice file!");
         }
-        try {
-            Files.createDirectories(Paths.get("build"));
-        } catch (IOException e) {
-            System.out.println("Could not create the build directory!");
-            e.printStackTrace();
-            return;
-        }
+        Path build = Path.of("build");
         for (String argument : arguments) {
-            final String FILE_EXTENSION = ".tr";
-            if (!argument.endsWith(FILE_EXTENSION)) {
-                System.out.println("The Thrice source files should have `" + FILE_EXTENSION + "` file extension!");
-                continue;
-            }
-            Source source = null;
+            Resolution resolution = null;
             try {
-                source = new Source(Paths.get(argument));
+                resolution = new Resolution(new Source(argument));
             } catch (IOException e) {
                 System.out.println("Could not read the file!");
                 e.printStackTrace();
                 continue;
             }
-            Resolution resolution = new Resolution(source);
-            String code = Generator.generate(resolution);
+            Generator.generate(resolution, build);
             if (resolution.errors() > 0) {
-                System.out.printf("There were %d errors in %s!%n", resolution.errors(), source.path);
+                System.out.printf("There were %d errors in %s!%n", resolution.errors(), argument);
             }
             if (resolution.warnings() > 0) {
-                System.out.printf("There were %d warnings in %s!%n", resolution.warnings(), source.path);
-            }
-            try (PrintStream out = new PrintStream(Files.newOutputStream(
-                    Paths.get("build/" + argument.substring(0, argument.length() - FILE_EXTENSION.length())
-                            + ".c")))) {
-                out.println(code);
-            } catch (IOException e) {
-                System.out.println("Could not write the output file!");
-                e.printStackTrace();
-                continue;
+                System.out.printf("There were %d warnings in %s!%n", resolution.warnings(), argument);
             }
         }
     }
